--- a/BiometricAuth_eng/templates/BiometricAuth/two_factor_auth.html
+++ b/BiometricAuth_eng/templates/BiometricAuth/two_factor_auth.html
@@ -11,7 +11,7 @@
             {% csrf_token %}
             <div class="form-group">
                 {{ auth_forms.iris.non_field_errors }}
-                {{ auth_forms.iris.errors }}
+                {% comment %} {{ auth_forms.iris.errors }} {% endcomment %}
             </div>
             {% comment %} <input name="auth-type" value='iris' hidden/> {% endcomment %}
             {{ auth_forms.iris.auth_type }}
