--- a/BiometricAuth_eng/templates/TestApp/personal_account.html
+++ b/BiometricAuth_eng/templates/TestApp/personal_account.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     <div id='iris-photos'>
-        <p>Загрузите фотографии Вашей сетчатки, чтобы разблокировать возможность аутентификации с помощью нее.</p>
+        <p>Загрузите фотографии радужки глаза, чтобы разблокировать возможность аутентификации с помощью нее.</p>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
+            <input name='form_type' value='iris' hidden/>
             <table class='no_error table'>
                 <thead>
                     <tr>
@@ -12,8 +13,7 @@
                     <th scope="col">Удалить?</th>
                     </tr>
                 </thead>
-            {% comment %} {{ iris_formset.media }} {% endcomment %}
-                {% for form in iris_formset.forms %}
+                {% for form in formsets.iris_formset.forms %}
                     {% for hidden in form.hidden_fields %}
                         {{ hidden }}
                     {% endfor %}  
@@ -32,9 +32,17 @@
                         </tbody>
                     </div>
                 {% endfor %}
-                {{ iris_formset.management_form }}
+                {{ formsets.iris_formset.management_form }}
             </table>
-            <button type="submit">Сохранить</button>
+            <button type="submit">Сохранить радужку</button>
         </form>
+    </div>
+
+    <div id="fingerprint-photos">
+
+    </div>
+
+    <div id='face-photos'>
+
     </div>
 {% endblock %}
