--- a/BiometricAuth_eng/templates/TestApp/personal_account.html
+++ b/BiometricAuth_eng/templates/TestApp/personal_account.html
@@ -43,6 +43,39 @@
     </div>
 
     <div id='face-photos'>
-
+        <p>Загрузите фотографию лица, чтобы разблокировать возможность аутентификации с помощью нее.</p>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input name='form_type' value='face' hidden/>
+            <table class='no_error table'>
+                <thead>
+                    <tr>
+                    <th scope="col">Фото лицо</th>
+                    <th scope="col">Удалить?</th>
+                    </tr>
+                </thead>
+                {% for form in formsets.face_formset.forms %}
+                    {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}  
+                    <div class="form-group">
+                        {{ form.non_field_errors }}
+                        {{ form.errors }}
+                        <tbody>
+                            <tr>
+                                <td> {{ form.face_image }} </td>
+                                <td>
+                                {% if face_formset.can_delete %}
+                                    {{ form.DELETE }}
+                                {% endif %} 
+                                </td>
+                            </tr>
+                        </tbody>
+                    </div>
+                {% endfor %}
+                {{ formsets.face_formset.management_form }}
+            </table>
+            <button type="submit">Сохранить лицо</button>
+        </form>
     </div>
 {% endblock %}
